# ipc-server

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  error.rs  lib.rs  main.rs  manager.rs  message.rs  server.rs  test.rs
src/client/: connector.rs  error.rs  message.rs  shared_object.rs  socket.rs  wait_for_objects.rs
src/test/: call_object_request.rs  json_value.rs  server.rs
