[package]
name = "ipc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
fern = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
tokio = { version = "1.33", features = ["full"] }


[lib]
name = "ipc_client"
path = "src/lib.rs"

[[bin]]
name = "ipc_server"
path = "src/main.rs"
