# An inter-process communication system that manages messages across processes via TCP stream.
# It uses JSON format strings as a protocol when exchanging messages across processes.
# This is also a library for the client-side processes for Rust.
# The user application can share the object across the TCP stream.
[package]
name = "ipc-server"
version = "0.1.2"
edition = "2021"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
license = "MIT"
description = "An inter-process communication system that manages messages across processes via TCP stream."
repository = "https://github.com/LorenzoLeonardo/ipc-server"
homepage = "https://github.com/LorenzoLeonardo/ipc-server"
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
fern = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
tokio = { version = "1.33", features = ["full"] }

[lib]
name = "ipc_client"
path = "src/lib.rs"

[[bin]]
name = "ipc_server"
path = "src/main.rs"
